# SPDX-FileCopyrightText: Copyright (c) 2026 Deltacast / NVIDIA. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["scikit-build-core>=0.10"]
build-backend = "scikit_build_core.build"

[project]
name = "holoscan-deltacast"
version = "0.1.0"
description = "Holoscan components for using the Deltacast Videomaster capture card"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Deltacast Team", email = "support@deltacast.tv" },
    { name = "Holoscan Team" },
]
requires-python = ">=3.10"

# NOTE: holoscan SDK is not declared as a runtime dependency here because the
# wheel cannot guarantee binary compatibility across CUDA variants (cu12/cu13).
# Document the install command in the README.

[tool.scikit-build]
cmake.version = ">=3.24"
# Build only what the wheel needs: turn off test and app subprojects, and
# turn off the deb option (which is build-type-driven, not wheel-driven).
cmake.args = [
    "-DHOLOSCAN_DELTACAST_BUILD_TESTING=OFF",
    "-DBUILD_ALL=OFF",
    "-DOP_deltacast_videomaster=ON",
]
# Wheel content comes from CMake install rules. Use *relative* DESTINATIONs in
# install(...) calls — scikit-build-core stages those into the wheel root.
# Setting wheel.install-dir = "/" would require the experimental flag.
wheel.packages = []

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    "build*",
    "dist",
    ".cache",
    ".holohub",
    ".local",
    ".cupy",
    "cmake/pybind11",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501", "UP007"]

[tool.ruff.lint.isort]
known-first-party = ["holoscan"]
